fix: footer paragraph wrapping lines

--- a/src/scss/modules/footer.scss
+++ b/src/scss/modules/footer.scss
@@ -33,7 +33,7 @@
         font-weight: 300;
         font-size: 1.25rem;
         line-height: 2.25rem;
-        max-width: 580px;
+        max-width: 36.25rem;
         margin:0;
     }
 }
